exports[`App renders correctly when connected 1`] = `
<div
  id="appRoot"
  style={
    Object {
      "backgroundColor": "white",
      "color": "rgb(64, 64, 64)",
      "height": "100%",
    }
  }>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    } />
  <div
    className="giu-notifications"
    style={
      Object {
        "bottom": 20,
        "maxWidth": 350,
        "position": "fixed",
        "right": 20,
        "zIndex": 9000,
      }
    } />
  <div
    colors={
      Object {
        "colorClientBg": "aliceblue",
        "colorClientBgIsDark": false,
        "colorClientFg": "black",
        "colorServerBg": "rgb(214, 236, 255)",
        "colorServerBgIsDark": false,
        "colorServerFg": "black",
        "colorUiBg": "white",
        "colorUiBgIsDark": false,
        "colorUiFg": "rgb(64, 64, 64)",
      }
    }
    dataMockType="Toolbar">
    Toolbar
  </div>
  <div
    style={
      Object {
        "padding": 4,
      }
    }>
    <div
      colors={
        Object {
          "colorClientBg": "aliceblue",
          "colorClientBgIsDark": false,
          "colorClientFg": "black",
          "colorServerBg": "rgb(214, 236, 255)",
          "colorServerBgIsDark": false,
          "colorServerFg": "black",
          "colorUiBg": "white",
          "colorUiBgIsDark": false,
          "colorUiFg": "rgb(64, 64, 64)",
        }
      }
      dataMockType="Story"
      level={0}
      seqFullRefresh={0}
      story={
        Object {
          "placeholderFor": "mainStory",
        }
      }>
      Story
    </div>
  </div>
</div>
------------HTML PREVIEW---------------
  <div
    id="appRoot"
    style="background-color:white;color:rgb(64, 64, 64);height:100%;">
    <div
      class="giu-floats"
      style="height:0;left:0;position:absolute;top:0;width:0;">
    </div>
    <div
      class="giu-notifications"
      style="bottom:20px;max-width:350px;position:fixed;right:20px;z-index:9000;">
    </div>
    <div
      dataMockType="Toolbar">
      Toolbar
    </div>
    <div
      style="padding:4px;">
      <div
        dataMockType="Story">
        Story
      </div>
    </div>
  </div>
`;

exports[`App renders correctly when disconnected 1`] = `
<div
  id="appRoot"
  style={
    Object {
      "backgroundColor": "white",
      "color": "rgb(64, 64, 64)",
      "height": "100%",
    }
  }>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    } />
  <div
    className="giu-notifications"
    style={
      Object {
        "bottom": 20,
        "maxWidth": 350,
        "position": "fixed",
        "right": 20,
        "zIndex": 9000,
      }
    } />
  <div
    className="giu-large-message"
    style={
      Object {
        "color": "rgb(115, 115, 115)",
        "fontSize": "1.4em",
        "fontWeight": 700,
        "padding": "0.8em",
        "textAlign": "center",
      }
    }>
    <div>
      <i
        className="giu-icon fa fa-circle-o-notch fa-spin"
        style={
          Object {
            "color": undefined,
            "cursor": "pointer",
            "letterSpacing": "normal",
          }
        } />
       Connecting to Storyboard...
    </div>
     
    <div>
      Navigate to your Storyboard-equipped app (and log in if required)
    </div>
  </div>
</div>
------------HTML PREVIEW---------------
  <div
    id="appRoot"
    style="background-color:white;color:rgb(64, 64, 64);height:100%;">
    <div
      class="giu-floats"
      style="height:0;left:0;position:absolute;top:0;width:0;">
    </div>
    <div
      class="giu-notifications"
      style="bottom:20px;max-width:350px;position:fixed;right:20px;z-index:9000;">
    </div>
    <div
      class="giu-large-message"
      style="color:rgb(115, 115, 115);font-size:1.4em;font-weight:700;padding:0.8em;text-align:center;">
      <div>
        <i
          class="giu-icon fa fa-circle-o-notch fa-spin"
          style="color:;cursor:pointer;letter-spacing:normal;">
        </i>
         Connecting to Storyboard...
      </div>
       
      <div>
        Navigate to your Storyboard-equipped app (and log in if required)
      </div>
    </div>
  </div>
`;
